Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30928

Crash in Listview when some of its tasks are still incubating

    XMLWordPrintable

Details

    Description

      In the Ubuntu Phone shell we have found a randomly reproducible crash that happens on heavy listview creation/deletion scenarios.

      I have traced that to the fact that it may happen that the deleted listviews can have incubating tasks running and thus when those incubation tasks finish they try to notify their listview but it is already gone and then you get the crash

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              aalpert Alan Alpert
              tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes